feat: Redis Geo 기반 사용자 위치 관리 시스템 구축
- RedisGeoConfig: Geo 전용 RedisTemplate 설정
- UserLocationService: 위치 저장, 반경 검색, 거리 정보 포함
- UserLocationController: 위치 저장/검색/삭제 API
- NearbyUserDto: 거리 정보 포함 DTO (포맷팅 지원)
- LocationSaveResponse: 위치 저장 응답 DTO
- UserLocationRequest: 위도/경도 유효성 검증
- UserLocationServiceTest: 8개 테스트 케이스
- build.gradle: embedded-redis 제거

주요 기능:
- 반경 내 사용자 검색 (1-50km)
- 거리순 정렬 및 거리 정보 제공
- 결과 개수 제한 (최대 100명)
- 에러 처리 및 로깅
- @Transactional 적용

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 	
 	// Pushy for APNs (iOS Push Notifications)
 	implementation 'com.eatthepath:pushy:0.15.4'
+
+    // Redis for storing user's location
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 
 tasks.named('test') {
