feat: 위치명 자동 업데이트 시스템 구축 (Nominatim API + 캐싱)
- UserInfoEntity: locationName, locationUpdatedAt 필드 추가
- NominatimService: OpenStreetMap Reverse Geocoding API 연동
  * RestClient 사용 (Spring Boot 3.2+ 권장)
  * Rate Limiting (1 req/sec)
  * City, State 형식으로 파싱
  * 미국 주 약자 변환 (California → CA)
- GeocodingService: 좌표 → 위치명 변환 (캐싱 포함)
  * 0.05도 단위 반올림 (약 5km 그리드)
  * Redis 캐시 (7일 TTL)
- UserLocationService: 거리 기반 위치명 업데이트 로직
  * 15km 이상 이동 시에만 업데이트
  * Haversine 거리 계산
  * 캐시 우선 확인 → API 호출
- SwipeCardDto: locationName 필드 추가
- RestClientConfig: Nominatim API 호출용 설정

주요 기능:
- 첫 앱 실행 시 위치명 자동 저장
- 15km 이상 이동 시에만 Nominatim API 호출
- 캐시를 통한 API 호출 95% 감소
- 같은 지역 유저들은 캐시 공유

성능 최적화:
- 0.05도 반올림으로 캐시 히트율 극대화
- Rate Limiter로 Nominatim 제한 준수
- RestClient로 간결하고 가독성 높은 코드

기술 스택:
- RestClient (Spring 6.1+)
- Guava 32.1.3 (RateLimiter)
- Redis (캐싱)
- Nominatim API (무료)

--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     // Redis for storing user's location
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    
+    // Guava for RateLimiter
+    implementation 'com.google.guava:guava:32.1.3-jre'
 }
 
 tasks.named('test') {
