--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.profiles.include=dev
 
+# Nominatim API Configuration
+nominatim.user-agent=CrushApp/1.0 (contact@crush.com)
